fix axis rotation ie IE

--- a/src/style/barcharthtml.less
+++ b/src/style/barcharthtml.less
@@ -74,6 +74,9 @@
         -o-transform: rotate(-90deg);
         transform-origin: top left;
         -webkit-transform-origin: top left;
+        -moz-transform-origin: top left;
+        -ms-transform-origin: top left;
+        -o-transform-origin: top left;
         .gd-label {
           height: 100%;
           width: 100%;
